--- a/receitas/formatos.css
+++ b/receitas/formatos.css
@@ -1,6 +1,22 @@
-/* Acrescentar overflow-y automático para a área principal */
+/* Definições globais */
 body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Ensure body takes up at least the full viewport height */
+    background-color: salmon;
+    margin: 0; /* Remove default body margin */
     overflow-y: auto;
+}
+
+h1 {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+p {
+    font-size: 16px;
 }
 
 /* Dimensões das áreas */
@@ -8,20 +24,23 @@ header {
     height: 60px;
 }
 
+.btn {
+    background-color: #333;
+    border-color:#333;
+}
+
 main {
-    height: calc(100vh - 100px);
+    flex: 1;
+    overflow-y: auto;
+    padding: 20px;
+    height: calc(100vh - 160px); /* 100vh - (header height + footer height) */
 }
 
 footer {
-    height: 25px;
+    height: 60px;
 }
 
-/* Alterar a área de exibição do navegador */
-.container {
-    height: 100%;
-}
-
-/* Definir uma classe para a logotipo */
+/* Formatação da logotipo */
 .logotipo {
     width: 50px;
     height: 50px;
@@ -31,41 +50,14 @@ footer {
 nav {
     background-color: #333;
     color: white;
-    padding: 10px;
+    padding: 30px;
+    flex-shrink: 0;
 }
 
-section {
-    margin: 20px;
-}
 
 footer {
-    background-color: #333;
+    background-color: black;
     color: white;
-    padding: 10px;
-}
-
-/* Características tipográficas globais */
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-}
-
-h1 {
-    font-size: 24px;
-}
-
-p {
-    font-size: 16px;
-}
-
-/* Visualização no modo flex */
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-/* Posicionamento adequado das áreas semânticas */
-nav, footer {
+    padding: 20px;
     flex-shrink: 0;
 }
