--- a/receitas/style/receitas.css
+++ b/receitas/style/receitas.css
@@ -36,7 +36,7 @@
 .card-body hr {
     border: none; /* Remove default border */
     border-top: 1px solid #ccc; /* Add horizontal line */
-    margin: 10px 0; /* Adjust margin */
+    margin: 30x 0; /* Adjust margin */
 }
 
 /* Formatação para o modo de preparo */
